--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "underscore": "^1.9.1",
     "yup": "^0.27.0"
   },
   "scripts": {
