--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "matches-shape": "^2.1.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
